// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-alarm-tag-field Renders \`c-alarm-tag-field\` with custom props 1`] = `
<c-lazy-search-field-stub
  autocomplete="true"
  chips=""
  class="c-alarm-tag-field"
  clearable=""
  dense=""
  disabled="true"
  has-more="true"
  hide-details="true"
  item-text="value"
  item-value="value"
  items="[object Object],[object Object],[object Object]"
  label="Custom label"
  menu-props="[object Object]"
  multiple=""
  name="customName"
  return-object=""
  value="[object Object]"
/>
`;

exports[`c-alarm-tag-field Renders \`c-alarm-tag-field\` with default props 1`] = `
<c-lazy-search-field-stub
  autocomplete="true"
  chips=""
  class="c-alarm-tag-field"
  clearable=""
  dense=""
  has-more="true"
  hide-details="true"
  item-text="value"
  item-value="value"
  items="[object Object],[object Object],[object Object]"
  label="Tag"
  menu-props="[object Object]"
  multiple=""
  name="tag"
  return-object=""
  value=""
/>
`;
